--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,11 +1,35 @@
 .hero-container {
   width: 100%;
-  height: 85vh;
+  height: 700px;
   display: flex;
-  object-fit: contain;
-  background-image: url("http://localhost:3000/images/mountain.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: #ecf0f1;
+  align-items: center;
+  justify-content: center;
+  padding: 3rem;
+}
 
-  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.2);
+.profile-picture,
+.profile-picture img {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin-left: 2rem;
+}
+
+.about-container h1 {
+  font-size: 3rem;
+  letter-spacing: 1px;
+}
+.about-container h2 {
+  font-size: 2rem;
+  letter-spacing: 1px;
+}
+.about-container h3 {
+  font-size: 1rem;
 }
