--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,30 +1,52 @@
 nav {
-  height: 100px;
+  height: 60px;
   width: 100%;
-  background-color: #242424;
+  background-color: var(--primary-color);
   position: relative;
+  box-shadow: 0px -5px 10px black;
 }
 
 .nav-logo {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
   left: 30px;
   color: white;
+  transform: translateY(-50%);
   text-decoration: none;
-  font-size: 40px;
+  font-size: 30px;
+  text-transform: uppercase;
 }
 
 .nav-items {
   display: flex;
   height: 100%;
   align-items: center;
-  justify-content: center;
+  right: 200px;
+  position: absolute;
 }
 
 .nav-item {
   text-decoration: none;
+  margin-right: 30px;
+  font-size: 1.2rem;
   color: white;
+}
+
+.nav-item:hover {
+  border-bottom: 2px solid var(--secondary-color);
+  margin-bottom: -2px;
+}
+
+.social-links {
+  right: 10px;
+  position: absolute;
+  font-size: 1.3em;
+}
+
+.social-links i {
   margin-right: 10px;
-  font-size: 1.5rem;
+}
+
+.active {
+  color: var(--secondary-color);
 }
