--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -11,8 +11,57 @@
   width: 100%;
 }
 
-.project-title {
+.project .overlay {
+  z-index: 10;
+  width: 100%;
+  bottom: 0;
+  height: 100%;
+  position: absolute;
+}
+
+.overlay:hover {
+  opacity: 0.7;
+}
+
+.project-info {
+  width: 100%;
+  height: 100%;
+  top: 30%;
+  padding: 2rem;
+  position: absolute;
+  z-index: 20;
+  color: white;
+}
+
+.project-overlay {
+  opacity: 0;
+  transition: 0.4s ease;
+}
+
+.project-overlay:hover {
+  opacity: 1;
 }
 
 .project-title {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 3rem;
+}
+
+.project-description {
+  width: 600px;
+  font-size: 1.5rem;
+  margin: 0 auto;
+}
+
+.language-figure {
+  bottom: 0;
+  position: absolute;
+  z-index: 100;
+  background-color: var(--secondary-color);
+  left: 0;
+  padding: 5px 10px;
+  border-radius: 10px 10px 0px 0px;
+  color: white;
+  margin-left: 30px;
 }
