--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 :root {
   --primary-color: #2ecc71;
   --secondary-color: #16a085;
+  --movie-primary-color: #2980d9;
+  --movie-secondary-color: white;
 }
 
 * {
@@ -44,9 +46,9 @@
   opacity: 0.7;
 }
 
-/* Project page */
+/* Projects page */
 
-.project-page {
+.projects-page {
   display: flex;
   flex-wrap: wrap;
   padding: 3rem;
@@ -72,4 +74,19 @@ footer {
 
 .social a {
   color: white;
+}
+
+/* Project Page */
+
+.project-page {
+}
+
+.project-page-image {
+  width: 800px;
+
+  box-shadow: 0px 0px 10px black;
+}
+
+.project-page-image img {
+  width: 800px;
 }
