--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,7 +1,7 @@
 nav {
   height: 60px;
   width: 100%;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-portfolio);
   position: relative;
   box-shadow: 0px -5px 10px black;
 }
