--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --secondary-color: #16a085;
   --movie-primary-color: #2980d9;
   --movie-secondary-color: white;
+  --hero-background: #2d3436;
 }
 
 * {
@@ -12,6 +13,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Noto Sans JP", sans-serif;
+}
+
+body {
+  background-color: #636e72;
+  color: white;
 }
 
 .container {
@@ -24,10 +30,14 @@
   margin: 50px 0 45px;
 }
 
+.recent-project-section {
+  padding-bottom: 3rem;
+}
+
 .recent-projects {
   display: flex;
   flex-wrap: wrap;
-  flex: 0 40%;
+  justify-content: space-between;
   padding: 1rem;
   text-align: center;
 }
@@ -94,4 +104,33 @@ footer {
 .notfound {
   margin: 0 auto;
   margin-top: 300px;
+}
+
+.technical-section {
+  width: 100%;
+  height: 600px;
+  padding: 2rem;
+  background-color: var(--hero-background);
+  color: white;
+}
+
+.technical-section ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.languages h2 {
+  letter-spacing: 2px;
+  font-size: 2rem;
+}
+
+.languages ul {
+  display: block;
+}
+
+.languages ul li {
+  list-style-type: none;
+  margin-bottom: 3px;
 }
