--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -2,10 +2,11 @@
   width: 100%;
   height: 700px;
   display: flex;
-  background-color: #ecf0f1;
+  background-color: var(--hero-background);
   align-items: center;
   justify-content: center;
   padding: 3rem;
+  color: white;
 }
 
 .profile-picture,
@@ -22,18 +23,21 @@
 .about-container {
   display: flex;
   flex-direction: column;
-  width: 600px;
+  width: 650px;
   margin-left: 2rem;
 }
 
 .about-container h1 {
   font-size: 3rem;
-  letter-spacing: 1px;
+  letter-spacing: 1.5px;
 }
 .about-container h2 {
-  font-size: 2rem;
-  letter-spacing: 1px;
+  font-size: 1.7rem;
+  letter-spacing: 1.5px;
+  margin-bottom: 5px;
+  text-transform: uppercase;
 }
-.about-container h3 {
+.about-container p {
   font-size: 1rem;
+  letter-spacing: 1px;
 }
