--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,43 +1,44 @@
 .hero-container {
-  width: 100%;
-  height: 700px;
-  display: flex;
-  background-color: var(--hero-background);
-  align-items: center;
-  justify-content: center;
-  padding: 3rem;
-  color: white;
+   width: 100%;
+   height: 700px;
+   display: flex;
+   background-color: var(--hero-background);
+   align-items: center;
+   justify-content: center;
+   padding: 3rem;
+   color: white;
+   box-shadow: -3px 0px 15px black;
 }
 
 .profile-picture,
 .profile-picture img {
-  width: 500px;
-  height: 500px;
-  border-radius: 50%;
+   width: 500px;
+   height: 500px;
+   border-radius: 50%;
 }
 
 .profile-picture img {
-  border: 4px solid var(--primary-color);
+   border: 4px solid var(--primary-color);
 }
 
 .about-container {
-  display: flex;
-  flex-direction: column;
-  width: 650px;
-  margin-left: 2rem;
+   display: flex;
+   flex-direction: column;
+   width: 650px;
+   margin-left: 2rem;
 }
 
 .about-container h1 {
-  font-size: 3rem;
-  letter-spacing: 1.5px;
+   font-size: 3rem;
+   letter-spacing: 1.5px;
 }
 .about-container h2 {
-  font-size: 1.7rem;
-  letter-spacing: 1.5px;
-  margin-bottom: 5px;
-  text-transform: uppercase;
+   font-size: 1.7rem;
+   letter-spacing: 1.5px;
+   margin-bottom: 5px;
+   text-transform: uppercase;
 }
 .about-container p {
-  font-size: 1rem;
-  letter-spacing: 1px;
+   font-size: 1rem;
+   letter-spacing: 1px;
 }
