--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,52 +1,52 @@
 nav {
-  height: 60px;
-  width: 100%;
-  background-color: var(--primary-color-portfolio);
-  position: relative;
-  box-shadow: 0px -5px 10px black;
+   height: 60px;
+   width: 100%;
+   background-color: var(--primary-color);
+   position: relative;
+   box-shadow: 0px -5px 10px black;
 }
 
 .nav-logo {
-  position: absolute;
-  top: 50%;
-  left: 30px;
-  color: white;
-  transform: translateY(-50%);
-  text-decoration: none;
-  font-size: 30px;
-  text-transform: uppercase;
+   position: absolute;
+   top: 50%;
+   left: 30px;
+   color: white;
+   transform: translateY(-50%);
+   text-decoration: none;
+   font-size: 30px;
+   text-transform: uppercase;
 }
 
 .nav-items {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  right: 200px;
-  position: absolute;
+   display: flex;
+   height: 100%;
+   align-items: center;
+   right: 200px;
+   position: absolute;
 }
 
 .nav-item {
-  text-decoration: none;
-  margin-right: 30px;
-  font-size: 1.2rem;
-  color: white;
+   text-decoration: none;
+   margin-right: 30px;
+   font-size: 1.2rem;
+   color: white;
 }
 
 .nav-item:hover {
-  border-bottom: 2px solid var(--secondary-color);
-  margin-bottom: -2px;
+   border-bottom: 2px solid var(--secondary-color);
+   margin-bottom: -2px;
 }
 
 .social-links {
-  right: 10px;
-  position: absolute;
-  font-size: 1.3em;
+   right: 10px;
+   position: absolute;
+   font-size: 1.3em;
 }
 
 .social-links i {
-  margin-right: 10px;
+   margin-right: 10px;
 }
 
 .active {
-  color: var(--secondary-color);
+   color: var(--secondary-color);
 }
