--- a/src/App.css
+++ b/src/App.css
@@ -132,3 +132,29 @@ footer {
    list-style-type: none;
    margin-bottom: 3px;
 }
+
+.about-container {
+   width: 100%;
+   padding: 3rem;
+   height: 400px;
+   display: flex;
+   justify-content: center;
+   background: linear-gradient(180deg, #2d3436 0%, #2d3436 35%, #636e72 100%);
+}
+
+.about-container h2 {
+   font-size: 2.8rem;
+   text-align: center;
+   margin-bottom: 20px;
+   letter-spacing: 3px;
+   text-transform: uppercase;
+}
+
+.about-container p {
+   font-size: 1.1rem;
+   letter-spacing: 3px;
+}
+
+.about-content {
+   width: 1200px;
+}
