--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,6 +1,5 @@
-.hero-container {
+.hero {
    width: 100%;
-   height: 700px;
    display: flex;
    background-color: var(--hero-background);
    align-items: center;
@@ -10,35 +9,24 @@
    box-shadow: -3px 0px 15px black;
 }
 
-.profile-picture,
-.profile-picture img {
-   width: 500px;
-   height: 500px;
-   border-radius: 50%;
-}
-
-.profile-picture img {
-   border: 4px solid var(--primary-color);
-}
-
-.about-container {
+.hero-container {
    display: flex;
    flex-direction: column;
    width: 650px;
    margin-left: 2rem;
 }
 
-.about-container h1 {
+.hero-container h1 {
    font-size: 3rem;
    letter-spacing: 1.5px;
 }
-.about-container h2 {
+.hero-container h2 {
    font-size: 1.7rem;
    letter-spacing: 1.5px;
    margin-bottom: 5px;
    text-transform: uppercase;
 }
-.about-container p {
+.hero-container p {
    font-size: 1rem;
    letter-spacing: 1px;
 }
