--- a/src/App.css
+++ b/src/App.css
@@ -14,22 +14,65 @@
 }
 
 body {
-   background-color: #636e72;
+   background-color: #4b4b4b;
    color: white;
 }
 
 .container {
-   width: 90%;
-   margin: 0 auto;
-}
-
-.wrapper {
+   margin: 40px 50px;
+   border-radius: 20px;
+   box-shadow: 0px 0px 20px black;
+   background-color: #3d3d3d;
+   padding: 1rem;
    position: relative;
-   margin: 50px 0 45px;
 }
 
-.recent-project-section {
-   padding-bottom: 3rem;
+.about-container {
+   width: 100%;
+   height: 300px;
+   margin-top: 20px;
+   display: flex;
+   justify-content: center;
+}
+.about-container hr {
+   border: 2px solid #4b4b4b;
+   margin: 10px 0px;
+}
+.about-container h1 {
+   text-align: center;
+   font-size: 3rem;
+   letter-spacing: 3px;
+}
+
+.about-container h2 {
+   font-size: 2.4rem;
+   text-align: center;
+   margin-bottom: 10px;
+   letter-spacing: 1px;
+   text-transform: uppercase;
+}
+
+.about-container p {
+   font-size: 1.1rem;
+   letter-spacing: 3px;
+   margin-bottom: 25px;
+}
+
+.about-content {
+   width: 1200px;
+}
+
+.social-icons {
+   position: absolute;
+   right: 10px;
+   top: 20px;
+   z-index: 100;
+}
+
+.social-icons img {
+   color: white;
+   width: 40px;
+   margin-right: 10px;
 }
 
 .recent-projects {
@@ -131,30 +174,4 @@ footer {
 .languages ul li {
    list-style-type: none;
    margin-bottom: 3px;
-}
-
-.about-container {
-   width: 100%;
-   padding: 3rem;
-   height: 400px;
-   display: flex;
-   justify-content: center;
-   background: linear-gradient(180deg, #2d3436 0%, #2d3436 35%, #636e72 100%);
-}
-
-.about-container h2 {
-   font-size: 2.8rem;
-   text-align: center;
-   margin-bottom: 20px;
-   letter-spacing: 3px;
-   text-transform: uppercase;
-}
-
-.about-container p {
-   font-size: 1.1rem;
-   letter-spacing: 3px;
-}
-
-.about-content {
-   width: 1200px;
 }
