--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
 
 :root {
-   --primary-color: #2ecc71;
-   --secondary-color: #16a085;
+   --primary-color: #2d3436;
+   --secondary-color: #00cec9;
+   --progress-bar-color: #55efc4;
    --hero-background: #2d3436;
+   --front-page-background: #0984e3;
+   --navbar-background: #171715;
+   --text-color-primary: rgb(193, 178, 154);
 }
 
 * {
@@ -11,85 +15,193 @@
    padding: 0;
    box-sizing: border-box;
    font-family: "Noto Sans JP", sans-serif;
+   list-style: none;
 }
 
 body {
-   background-color: #4b4b4b;
+   background-color: var(--front-page-background);
    color: white;
-}
-
-.container {
-   margin: 40px 50px;
-   border-radius: 20px;
-   box-shadow: 0px 0px 20px black;
-   background-color: #3d3d3d;
-   padding: 1rem;
-   position: relative;
-}
-
-.about-container {
-   width: 100%;
-   height: 300px;
-   margin-top: 20px;
-   display: flex;
-   justify-content: center;
-}
-.about-container hr {
-   border: 2px solid #4b4b4b;
-   margin: 10px 0px;
-}
-.about-container h1 {
-   text-align: center;
-   font-size: 3rem;
-   letter-spacing: 3px;
-}
-
-.about-container h2 {
-   font-size: 2.4rem;
-   text-align: center;
-   margin-bottom: 10px;
-   letter-spacing: 1px;
-   text-transform: uppercase;
-}
-
-.about-container p {
-   font-size: 1.1rem;
-   letter-spacing: 3px;
-   margin-bottom: 25px;
-}
-
-.about-content {
-   width: 1200px;
-}
-
-.social-icons {
-   position: absolute;
-   right: 10px;
-   top: 20px;
-   z-index: 100;
-}
-
-.social-icons img {
-   color: white;
-   width: 40px;
-   margin-right: 10px;
-}
-
-.recent-projects {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-between;
-   padding: 1rem;
-   text-align: center;
+   overflow-x: hidden;
 }
 
 .section-header {
    text-align: center;
-   font-size: 2.1rem;
-   margin-top: 30px;
-   margin-bottom: 10px;
+   font-size: 3rem;
    letter-spacing: 2px;
+}
+
+.front-page {
+   width: 100vw;
+   height: 100vh;
+   position: relative;
+}
+
+.front-page .font-page-content {
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translateY(-50%);
+   transform: translateX(-50%);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
+
+.font-page-content h1 {
+   font-size: 4rem;
+   margin-top: -90px;
+}
+
+.font-page-content h1 span {
+   color: var(--primary-color);
+}
+
+.font-page-content h3 {
    text-transform: uppercase;
+   letter-spacing: 2px;
+   font-size: 2rem;
+}
+
+.font-page-content button {
+   cursor: pointer;
+}
+
+.font-page-content button i {
+   margin-left: 5px;
+}
+
+/* Button styling */
+
+.btn {
+   border: none;
+   padding: 10px 20px;
+   margin: 10px;
+}
+
+.btn:focus {
+   outline: none;
+}
+
+.btn-primary {
+   border: 3px solid var(--primary-color);
+   background: none;
+   color: white;
+   font-size: 1rem;
+   transition: 0.3s;
+}
+
+.btn-primary:hover {
+   background-color: var(--primary-color);
+}
+
+/*  End of Button styling */
+
+/* Navbar Styling */
+
+.navbar {
+   width: 100%;
+   height: 55px;
+   bottom: 0;
+   left: 0;
+   background-color: var(--navbar-background);
+   border-bottom: 3px solid var(--secondary-color);
+   transition: all 0.3s ease;
+   position: absolute;
+}
+
+.navbar ul {
+   display: flex;
+}
+
+.navbar ul li a {
+   color: white;
+   text-decoration: none;
+   text-transform: uppercase;
+   cursor: pointer;
+}
+
+.nav-item {
+   padding: 15px;
+}
+
+.sticky {
+   position: fixed;
+   top: 0;
+   width: 100%;
+   z-index: 100;
+   transition: all 0.3s ease;
+}
+
+.active {
+   color: var(--secondary-color) !important;
+}
+
+/* End of Navbar Styling */
+
+/* About section */
+
+.about-section {
+   width: 100%;
+   height: 800px;
+   padding: 3.4rem;
+   background-color: var(--navbar-background);
+}
+
+.about-section hr {
+   width: 100px;
+   margin: 0 auto;
+   margin-top: 10px;
+   border: 2px solid var(--hero-background);
+}
+
+.profile {
+   display: flex;
+   justify-content: center;
+   margin-top: 100px;
+}
+
+.profile img {
+   border-radius: 50%;
+   width: 350px;
+   height: 350px;
+}
+
+.tools {
+   margin-top: 45px;
+   margin-left: 100px;
+}
+
+.profile-description {
+   width: 500px;
+   height: 500px;
+   margin-left: 320px;
+   margin-top: 10px;
+}
+.profile-description p {
+   font-size: 1rem;
+   margin-top: 10px;
+}
+
+/* End of About section */
+
+/* Project section */
+
+.project-section {
+   width: 100%;
+   padding: 3rem;
+   background-color: #2d3436;
+}
+
+.project-section h1 {
+   margin-bottom: 30px;
+}
+
+.project-list {
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+   justify-content: center;
 }
 
 .overlay {
@@ -97,81 +209,4 @@ body {
    opacity: 0.7;
 }
 
-/* Projects page */
-
-.projects-page {
-   display: flex;
-   flex-wrap: wrap;
-   padding: 3rem;
-   justify-content: center;
-   width: 100%;
-}
-
-footer {
-   width: 100%;
-   background-color: #2c3e50;
-   display: flex;
-   align-items: center;
-   padding: 4rem;
-}
-
-.social {
-   width: 300px;
-}
-
-.social i {
-   font-size: 3rem;
-}
-
-.social a {
-   color: white;
-}
-
-/* Project Page */
-
-.project-page {
-}
-
-.project-page-image {
-   width: 800px;
-
-   box-shadow: 0px 0px 10px black;
-}
-
-.project-page-image img {
-   width: 800px;
-}
-
-.notfound {
-   margin: 0 auto;
-   margin-top: 300px;
-}
-
-.technical-section {
-   width: 100%;
-   height: 600px;
-   padding: 2rem;
-   background-color: var(--hero-background);
-   color: white;
-}
-
-.technical-section ul {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   padding: 1rem;
-}
-
-.languages h2 {
-   letter-spacing: 2px;
-   font-size: 2rem;
-}
-
-.languages ul {
-   display: block;
-}
-
-.languages ul li {
-   list-style-type: none;
-   margin-bottom: 3px;
-}
+/* End of Project section */
