added smooth scroll

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
    list-style: none;
 }
 
+html {
+   scroll-behavior: smooth;
+}
+
 body {
    background-color: var(--front-page-background);
    color: white;
