--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,12 @@ body {
    background-color: var(--front-page-background);
    color: white;
    overflow-x: hidden;
+   -ms-overflow-style: none; /* IE and Edge */
+   scrollbar-width: none; /* Firefox */
+}
+
+body::-webkit-scrollbar {
+   display: none;
 }
 
 .section-header {
@@ -110,7 +116,6 @@ body {
    left: 0;
    background-color: var(--navbar-background);
    border-bottom: 3px solid var(--secondary-color);
-   transition: all 0.3s ease;
    position: absolute;
 }
 
@@ -122,7 +127,12 @@ body {
    color: white;
    text-decoration: none;
    text-transform: uppercase;
+   transition: 0.3s;
    cursor: pointer;
+}
+
+.navbar ul li a:hover {
+   color: var(--secondary-color);
 }
 
 .nav-item {
@@ -139,6 +149,23 @@ body {
 
 .active {
    color: var(--secondary-color) !important;
+}
+
+.social-links {
+   position: absolute;
+   z-index: 100;
+   top: 50%;
+   transform: translateY(-50%);
+   right: 20px;
+}
+
+.social-links a {
+   color: white;
+}
+
+.social-links a i {
+   font-size: 2.1rem;
+   margin-right: 20px;
 }
 
 /* End of Navbar Styling */
@@ -214,3 +241,49 @@ body {
 }
 
 /* End of Project section */
+
+/* Contact Section */
+
+.contact {
+   width: 100%;
+   padding: 5rem;
+   position: relative;
+   background-color: var(--navbar-background);
+}
+
+.contact-form {
+   width: 600px;
+   height: 600px;
+   margin: 0 auto;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background-color: var(--primary-color);
+   border-radius: 20px;
+   box-shadow: 0px 0px 10px black;
+}
+
+.contact-form h1 {
+   margin-bottom: 30px;
+   text-transform: uppercase;
+   letter-spacing: 2px;
+}
+
+.contact-form input {
+   width: 75%;
+   padding: 15px;
+   margin-bottom: 15px;
+   border: none;
+   border-radius: 10px;
+}
+
+.contact-form input:nth-child(4) {
+   height: 100px;
+}
+
+.contact-form input:focus {
+   outline: none;
+}
+
+/* End of Contact Section */
