--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,67 +1,68 @@
 .project {
-  width: 800px;
-  height: 450px;
-  position: relative;
-  overflow: hidden;
-  margin: 5px;
-  box-shadow: 0px 0px 5px black;
+   width: 800px;
+   height: 450px;
+   position: relative;
+   overflow: hidden;
+   margin: 5px;
+   box-shadow: 0px 0px 5px black;
 }
 
 .project img {
-  width: 100%;
+   width: 100%;
 }
 
 .project .overlay {
-  z-index: 10;
-  width: 100%;
-  bottom: 0;
-  height: 100%;
-  position: absolute;
+   z-index: 10;
+   width: 100%;
+   bottom: 0;
+   height: 100%;
+   position: absolute;
 }
 
 .overlay:hover {
-  opacity: 0.7;
+   opacity: 0.7;
 }
 
 .project-info {
-  width: 100%;
-  height: 100%;
-  top: 30%;
-  padding: 2rem;
-  position: absolute;
-  z-index: 20;
-  color: white;
+   width: 100%;
+   height: 100%;
+   top: 30%;
+   padding: 2rem;
+   position: absolute;
+   z-index: 20;
+   color: white;
+   text-align: center;
 }
 
 .project-overlay {
-  opacity: 0;
-  transition: 0.4s ease;
+   opacity: 0;
+   transition: 0.4s ease;
 }
 
 .project-overlay:hover {
-  opacity: 1;
+   opacity: 1;
 }
 
 .project-title {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 3rem;
+   text-transform: uppercase;
+   letter-spacing: 2px;
+   font-size: 3rem;
 }
 
 .project-description {
-  width: 600px;
-  font-size: 1.5rem;
-  margin: 0 auto;
+   width: 600px;
+   font-size: 1.5rem;
+   margin: 0 auto;
 }
 
 .language-figure {
-  bottom: 0;
-  position: absolute;
-  z-index: 100;
-  background-color: var(--secondary-color);
-  left: 0;
-  padding: 5px 10px;
-  border-radius: 10px 10px 0px 0px;
-  color: white;
-  margin-left: 30px;
+   bottom: 0;
+   position: absolute;
+   z-index: 10;
+   background-color: var(--secondary-color);
+   left: 0;
+   padding: 5px 10px;
+   border-radius: 10px 10px 0px 0px;
+   color: white;
+   margin-left: 30px;
 }
