--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -1,48 +1,24 @@
-.tool {
+.tools {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 500px;
-  height: 30px;
-  position: relative;
-  margin-bottom: 10px;
 }
 
-.tool .language {
-  background-color: #8854d0;
-  width: 150px;
+.tools h1 {
+  border-bottom: 2px solid #a55eea;
+}
+
+.tools li {
   text-align: center;
-  padding: 3px;
-  z-index: 10;
-  position: absolute;
-  text-transform: uppercase;
-}
-
-.progress-bar,
-.progress-bar-fill,
-.language {
-  width: 500px;
-  height: 100%;
-}
-
-.progress-bar {
-  position: absolute;
-  top: 0;
-  z-index: 5;
-  text-align: right;
   background-color: #2d3436;
+  margin-top: 5px;
 }
 
-.progress-bar p {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  margin-right: 10px;
-  z-index: 100;
+.tools .languages {
+  margin-right: 30px;
 }
 
-.progress-bar-fill {
-  border-radius: 20px;
-  position: absolute;
-  z-index: 7;
-  width: 300px;
-  background-color: #a55eea;
+.tools .languages li {
+  text-transform: uppercase;
 }
