--- a/src/App.sass
+++ b/src/App.sass
@@ -274,3 +274,18 @@ body::-webkit-scrollbar
 
 
 /* End of Contact Section */
+
+
+@media only screen and (max-width: 400px)
+   body
+      overflow-x: hidden
+
+   .font-page-content 
+      width: 80%
+      font-size: 2rem
+
+      h1
+         font-size: 2rem
+
+      .tools
+         display: hidden
