--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -2,23 +2,44 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 500px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 520px;
 }
 
 .tools h1 {
   border-bottom: 2px solid #a55eea;
-}
-
-.tools li {
-  text-align: center;
-  background-color: #2d3436;
-  margin-top: 5px;
+  margin-bottom: 10px;
+  padding-bottom: 2px;
 }
 
 .tools .languages {
   margin-right: 30px;
+  padding: 10px;
+  background: #222222;
+  -webkit-box-shadow: 0px 0px 10px #222222;
+          box-shadow: 0px 0px 10px #222222;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 520px;
 }
 
 .tools .languages li {
-  text-transform: uppercase;
+  margin-top: 5px;
+}
+
+.tools .languages li img {
+  height: 50px;
+  margin-right: 10px;
+}
+
+.icon-big {
+  height: 57px !important;
+  margin-top: -5px;
 }
