--- a/src/components/Tools/Tools.sass
+++ b/src/components/Tools/Tools.sass
@@ -1,21 +1,35 @@
 $primary-color: #2d3436
-$language-color: #8854d0
+$language-color: #222222
 $progress-bar-color: #a55eea
+
     
 .tools
     display: flex
-    width: 500px
+    flex-direction: column
+    width: 520px
 
     h1
         border-bottom: 2px solid $progress-bar-color
-
-    li
-        text-align: center
-        background-color: $primary-color
-        margin-top: 5px
-
+        margin-bottom: 10px
+        padding-bottom: 2px
+    
     .languages
         margin-right: 30px
-
+        padding: 10px
+        background: $language-color
+        box-shadow: 0px 0px 10px $language-color
+        border-radius: 5px
+        display: flex
+        flex-wrap: wrap
+        width: 520px
+        
         li
-            text-transform: uppercase
+            margin-top: 5px
+
+            img
+                height: 50px
+                margin-right: 10px
+
+.icon-big 
+    height: 57px !important
+    margin-top: -5px
