--- a/src/css/Home.module.scss
+++ b/src/css/Home.module.scss
@@ -27,6 +27,10 @@
                text-transform: uppercase;
                letter-spacing: 2px;
                font-size: 2rem;
+
+               span {
+                    color: #2d3436;
+               }
           }
 
           button {
