--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,10 +1,11 @@
 .project {
      width: 800px;
-     height: auto;
+     height: 450px;
      position: relative;
      overflow: hidden;
      margin: 5px;
      box-shadow: 0px 0px 5px black;
+     background-color: white;
 }
 
 .project img {
@@ -73,5 +74,42 @@
           font-size: 0.7rem;
           margin-left: 15px;
           border-radius: 5px 5px 0px 0px;
+     }
+}
+
+.project-full {
+     width: 1600px;
+     height: auto;
+     min-height: 300px;
+     background-color: #171715;
+     box-shadow: 0px 0px 10px black;
+     overflow: hidden;
+     margin-top: 15px;
+     margin-bottom: 15px;
+
+     hr {
+          width: 45%;
+          margin-left: 0;
+          margin-top: 5px;
+          border: 1px solid white;
+     }
+
+     .imagePlaceholder {
+          background-color: white;
+          height: 300px;
+     }
+
+     img {
+          height: 300px;
+          box-shadow: 0px 0px 10px black;
+     }
+
+     .content {
+          margin-left: 50px;
+
+          p.description {
+               margin-top: 10px;
+               width: 80%;
+          }
      }
 }
