--- a/src/css/Global.scss
+++ b/src/css/Global.scss
@@ -33,6 +33,27 @@ body {
      @include scrollbar();
 }
 
+.flex {
+     display: flex;
+}
+.flex-center {
+     justify-content: center;
+     align-items: center;
+}
+.flex.align-center {
+     align-items: center;
+}
+.flex.justify-between {
+     justify-content: space-between;
+}
+.flex.justify-around {
+     justify-content: space-around;
+}
+
+.flex.flex-col {
+     flex-direction: column;
+}
+
 .section-header {
      text-align: center;
      font-size: 3rem;
@@ -163,4 +184,36 @@ body {
      .font-page-content .tools {
           display: hidden;
      }
+}
+
+.w-100 {
+     width: 100%;
+}
+
+.w-80 {
+     width: 80%;
+}
+
+.h-100 {
+     height: 100%;
+}
+
+.p-20 {
+     padding: 20px;
+}
+
+.p-40 {
+     padding: 40px;
+}
+
+footer {
+     background-color: #0984e3;
+     position: relative;
+     width: 100%;
+     height: 50px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 1.2rem;
+     z-index: 50;
 }
