--- a/src/css/Section.module.scss
+++ b/src/css/Section.module.scss
@@ -1,11 +1,13 @@
 .section {
      padding: 30px;
-}
+     z-index: 100;
+     position: relative;
 
-.section hr {
-     width: 200px;
-     margin: 0 auto;
-     border: 2px solid #2d3436;
+     hr {
+          width: 200px;
+          margin: 0 auto;
+          border: 2px solid #2d3436;
+     }
 }
 
 .sectionHeader {
