--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -110,6 +110,11 @@
           p.description {
                margin-top: 10px;
                width: 80%;
+               margin-bottom: 5px;
+          }
+
+          h4 {
+               margin-top: 10px;
           }
      }
 }
